@@ -77,7 +77,7 @@ class UserProfileImporterTests(unittest.TestCase):
         self.assertEqual(profile.organization, 'Open Society Institute')
         self.assertEqual(profile.location, 'Port-au-Prince')
         self.assertEqual(profile.country, 'HT')
-        self.assertEqual(profile.websites, ['http://karl.example.com/profile'])
+        self.assertEqual(profile.websites, ('http://www.example.com/profile',))
         self.assertEqual(profile.languages, 'Italian, English, Esperanto')
         self.assertEqual(profile.office, 'Fondation Connaissance et Liberte')
         self.assertEqual(profile.room_no, '1234')
@@ -125,7 +125,7 @@ class UserProfileImporterTests(unittest.TestCase):
         self.assertEqual(profile.organization, 'Open Society Institute')
         self.assertEqual(profile.location, 'Port-au-Prince')
         self.assertEqual(profile.country, 'HT')
-        self.assertEqual(profile.websites, [])
+        self.assertEqual(profile.websites, ())
         self.assertEqual(profile.languages, 'Italian, English, Esperanto')
         self.assertEqual(profile.office, 'Fondation Connaissance et Liberte')
         self.assertEqual(profile.room_no, '1234')
@@ -175,7 +175,7 @@ class UserProfileImporterTests(unittest.TestCase):
         self.assertEqual(profile.organization, 'Open Society Institute')
         self.assertEqual(profile.location, 'Port-au-Prince')
         self.assertEqual(profile.country, 'HT')
-        self.assertEqual(profile.websites, ['http://karl.example.com/profile'])
+        self.assertEqual(profile.websites, ('http://www.example.com/profile',))
         self.assertEqual(profile.languages, 'Italian, English, Esperanto')
         self.assertEqual(profile.office, 'Fondation Connaissance et Liberte')
         self.assertEqual(profile.room_no, '1234')
