@@ -13,7 +13,7 @@
   <organization>Open Society Institute</organization>
   <location>Port-au-Prince</location>
   <country>HT</country>
-  <website>http://karl.example.com/profile</website>
+  <website>www.example.com/profile</website>
   <languages>Italian, English, Esperanto</languages>
   <office>Fondation Connaissance et Liberte</office>
   <room_no>1234</room_no>
